hello-kubernetes/manifests/ingress/ingress-hello-kubernetes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
  annotations:
    kubernetes.io/spec.ingressClassName: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
  - host: "hello-kubernetes.${ .ClusterLabels.domain }"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes
            port:
              number: 80
